<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".PetOwnerWindow">

    <TextView
        android:id="@+id/HelloText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30dp"
        android:padding="50dp"
        style="@style/titles"
        tools:text="@string/welcome"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/UpdateDetails"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_bottom"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/update_details_pet" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <Button
            android:id="@+id/FindVet"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/search_vet"
            android:background="@drawable/rounded_bottom"
            android:gravity="center"
            android:textSize="20sp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/LogOut"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/disconnect"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@drawable/rounded_bottom"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <Button
            android:id="@+id/DeleteAccount"
            android:layout_width="300dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_bottom"
            android:gravity="center"
            android:text="@string/delete_account"
            android:textSize="20sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/my_appointments"
            android:gravity="right"
            android:textSize="20sp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/appointments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/petName"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/petDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingStart="16dp">
                </LinearLayout>

                <ImageView
                    android:id="@+id/petImage"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_account"
                    android:clickable="true"
                    android:focusable="true"/>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>